# active-object

./: CMakeLists.txt  README.md
include/activeobj/: activeobj.h
src/: activeobj.cpp
